--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_movie_detail">Movie Details</string>
+    <string name="network_connection_not_available">Please check your device Internet connection!</string>
+    <string name="release_date">\t(Release)</string>
+    <string name="rating">\t(Rating)</string>
 </resources>
