--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="network_connection_not_available">Please check your device Internet connection!</string>
     <string name="release_date">\t(Release)</string>
     <string name="rating">\t(Rating)</string>
+    <string name="movies_sync_account_type">movies.exinnos.com</string>
 </resources>
