Sync Popular and highest rated movies to local database.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="rating">\t(Rating)</string>
     <string name="movies_sync_account_type">movies.exinnos.com</string>
     <string name="movies_content_authority">com.exinnos.popularmovies</string>
+    <string name="refresh">Refresh</string>
 </resources>
